--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
     "watch": "tsc --build --watch"
   },
   "devDependencies": {
+    "@apollo/server": "4.0.0-alpha.2",
+    "@apollo/utils.keyvaluecache": "1.0.1",
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "2.24.1",
+    "@types/http-cache-semantics": "4.0.1",
     "@types/jest": "28.1.6",
     "@types/node": "14.18.23",
     "cspell": "6.5.0",
+    "graphql": "16.5.0",
     "jest": "28.1.3",
     "jest-junit": "14.0.0",
+    "nock": "13.2.9",
     "prettier": "2.7.1",
     "ts-jest": "28.0.7",
     "ts-node": "10.9.1",
@@ -47,5 +52,11 @@
   "volta": {
     "node": "16.16.0",
     "npm": "8.15.1"
+  },
+  "dependencies": {
+    "http-cache-semantics": "^4.1.0"
+  },
+  "peerDependencies": {
+    "graphql": "^16.5.0"
   }
 }
