--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@apollo/typescript-repo-template",
+  "name": "@apollo/datasource-rest",
   "private": true,
-  "description": "A template for TypeScript projects with pre-configured tooling",
-  "version": "0.0.0",
+  "description": "A REST data source for Apollo Server",
+  "version": "3.0.0",
   "author": "Apollo <packages@apollographql.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apollographql/typescript-repo-template"
+    "url": "https://github.com/apollographql/datasource-rest"
   },
-  "homepage": "https://github.com/apollographql/typescript-repo-template#readme",
+  "homepage": "https://github.com/apollographql/datasource-rest#readme",
   "bugs": {
-    "url": "https://github.com/apollographql/typescript-repo-template/issues"
+    "url": "https://github.com/apollographql/datasource-rest/issues"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@apollo/server": "4.0.0-alpha.2",
-    "@apollo/utils.keyvaluecache": "1.0.1",
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "2.24.1",
     "@types/http-cache-semantics": "4.0.1",
@@ -49,14 +48,17 @@
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   },
-  "volta": {
-    "node": "16.16.0",
-    "npm": "8.15.1"
-  },
   "dependencies": {
-    "http-cache-semantics": "^4.1.0"
+    "@apollo/utils.fetcher": "^1.0.0",
+    "@apollo/utils.keyvaluecache": "1.0.1",
+    "http-cache-semantics": "^4.1.0",
+    "node-fetch": "^2.6.7"
   },
   "peerDependencies": {
     "graphql": "^16.5.0"
+  },
+  "volta": {
+    "node": "16.16.0",
+    "npm": "8.15.1"
   }
 }
