--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "29.2.3",
     "@types/node": "14.18.33",
     "cspell": "6.15.0",
+    "form-data": "^4.0.0",
     "graphql": "16.6.0",
     "jest": "29.3.1",
     "jest-junit": "14.0.1",
@@ -49,7 +50,7 @@
     "typescript": "4.9.3"
   },
   "dependencies": {
-    "@apollo/utils.fetcher": "^1.0.0",
+    "@apollo/utils.fetcher": "https://pkg.csb.dev/apollographql/apollo-utils/commit/7e8609d7/@apollo/utils.fetcher",
     "@apollo/utils.keyvaluecache": "1.0.2",
     "http-cache-semantics": "^4.1.0",
     "node-fetch": "^2.6.7"
