--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@changesets/cli": "2.25.2",
     "@types/http-cache-semantics": "4.0.1",
     "@types/jest": "29.2.3",
-    "@types/lodash.isobject": "^3.0.7",
+    "@types/lodash.isplainobject": "4.0.7",
     "@types/node": "14.18.33",
     "cspell": "6.15.0",
     "graphql": "16.6.0",
@@ -53,7 +53,7 @@
     "@apollo/utils.fetcher": "^1.0.0",
     "@apollo/utils.keyvaluecache": "1.0.2",
     "http-cache-semantics": "^4.1.0",
-    "lodash.isobject": "^3.0.2",
+    "lodash.isplainobject": "^4.0.6",
     "node-fetch": "^2.6.7"
   },
   "peerDependencies": {
