--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/lodash.isplainobject": "4.0.7",
     "@types/node": "14.18.33",
     "cspell": "6.15.0",
+    "form-data": "^4.0.0",
     "graphql": "16.6.0",
     "jest": "29.3.1",
     "jest-junit": "14.0.1",
