--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@apollo/utils.withrequired": "2.0.0",
     "@changesets/changelog-github": "0.4.7",
     "@changesets/cli": "2.25.2",
-    "@types/http-cache-semantics": "4.0.1",
     "@types/jest": "29.2.3",
     "@types/lodash.isplainobject": "4.0.7",
     "@types/node": "14.18.34",
@@ -52,7 +51,8 @@
   },
   "dependencies": {
     "@apollo/utils.fetcher": "^2.0.0",
-    "@apollo/utils.keyvaluecache": "1.0.2",
+    "@apollo/utils.keyvaluecache": "^1.0.2",
+    "@types/http-cache-semantics": "^4.0.1",
     "http-cache-semantics": "^4.1.0",
     "lodash.isplainobject": "^4.0.6",
     "node-fetch": "^2.6.7"
