--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "spell-check": "cspell lint '**' --no-progress || (echo 'Add any real words to cspell-dict.txt.'; exit 1)",
     "test": "jest",
     "test:ci": "jest --coverage --ci --maxWorkers=2 --reporters=default --reporters=jest-junit",
-    "watch": "tsc --build --watch"
+    "watch": "tsc --build --watch",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@apollo/server": "4.5.0",
@@ -36,7 +37,10 @@
     "@types/jest": "29.5.0",
     "@types/lodash.isplainobject": "4.0.7",
     "@types/node": "14.18.41",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "cspell": "6.31.1",
+    "eslint": "^8.36.0",
     "form-data": "4.0.0",
     "graphql": "16.6.0",
     "jest": "29.5.0",
