Block @apollo/utils v3 packages until we drop node 14

--- a/renovate.json5
+++ b/renovate.json5
@@ -27,6 +27,11 @@
       "matchPackageNames": ["@types/node"],
       "allowedVersions": "14.x"
     },
+    // @apollo/utils@3 drop support for node v16. We can take this when we drop node v14 support.
+    {
+      matchPackagePatterns: ["^@apollo/utils"],
+      allowedVersions: "2.x"
+    },
     // v3 is ESM only
     {
       "matchPackageNames": ["node-fetch"],
