--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,25 @@ jobs:
       - setup-node
       - run: npm run spell-check
 
+  # Ensure that any PR that changes packages has a changeset on it (perhaps
+  # an empty one created with `changeset --empty`).
+  # We run the Changesets job itself on all branches so that we can require
+  # it to pass, but we don't run any steps on the "Version Packages" PRs
+  # themselves.
+  Changesets:
+    docker:
+    - image: cimg/base:stable
+    steps:
+      - run: echo Ensure there is at least one step
+      - unless:
+          condition:
+            matches:
+              pattern: "^changeset-release/.+$"
+              value: << pipeline.git.branch >>
+          steps:
+            - setup-node
+            - run: npm run changeset-check
+
 workflows:
   version: 2
   Build:
@@ -80,3 +99,4 @@ workflows:
       - Prettier
       - Lint
       - Spell Check
+      - Changesets
