--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@changesets/changelog-github": "0.4.8",
     "@changesets/cli": "2.26.2",
     "@types/jest": "29.5.5",
+    "@types/lodash.clonedeep": "4.5.7",
     "@types/lodash.isplainobject": "4.0.7",
     "@types/node": "16.18.58",
     "@typescript-eslint/eslint-plugin": "6.7.5",
@@ -59,6 +60,7 @@
     "@apollo/utils.withrequired": "^3.0.0",
     "@types/http-cache-semantics": "^4.0.1",
     "http-cache-semantics": "^4.1.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.isplainobject": "^4.0.6",
     "node-fetch": "^2.6.7"
   },
