--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apollo/datasource-rest",
+  "name": "@apollo/datasource-rest-storage",
   "description": "REST DataSource for Apollo Server v4",
   "version": "6.3.0",
   "author": "Apollo <packages@apollographql.com>",
