--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "watch": "tsc --build --watch",
     "lint": "eslint src/**/*.ts",
     "changeset-publish": "changeset publish",
-    "changeset-check": "changeset status --verbose --since=origin/main"
+    "changeset-check": "changeset status --verbose --since=origin/main",
+    "changeset-version": "changeset version"
   },
   "devDependencies": {
     "@apollo/server": "4.11.0",
