change release flow

--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -11,7 +11,6 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
-          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v4
@@ -19,12 +18,34 @@ jobs:
           node-version: 16.x
       - name: Install Dependencies
         run: npm i
-      - name: Create Release
-        uses: changesets/action@v1
-        with:
-          version: npm run changeset-version
-          commit: "chore: version packages"
-          title: "chore: version packages"
-          createGithubReleases: true
+      - name: Setup Git
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "github-actions@github.com"
+      - name: Version and Create Tag
+        id: version
+        run: |
+          # Run changeset version
+          npx changeset version
+          
+          # Get new version from package.json
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          
+          # Commit changes
+          git add .
+          git commit -m "chore: release version $NEW_VERSION"
+          
+          # Create and push tag
+          git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
+          git push origin "v$NEW_VERSION"
+          git push origin feature/aiova/storage-mode
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.version.outputs.new_version }}
+          release_name: Release v${{ steps.version.outputs.new_version }}
+          draft: false
+          prerelease: false
