--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -41,7 +41,7 @@ jobs:
           # Create and push tag
           git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
           git push origin "v$NEW_VERSION"
-          git push origin feature/aiova/storage-mode
+          git push origin main
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
