CI/CD workflow test (#1)

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,9 +2,9 @@
   "$schema": "https://unpkg.com/@changesets/config@1.6.3/schema.json",
   "changelog": [
     "@changesets/changelog-github",
-    { "repo": "apollographql/datasource-rest" }
+    { "repo": "ak-datasource-rest" }
   ],
   "commit": false,
-  "access": "public",
+  "access": "restricted",
   "baseBranch": "main"
 }
