--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -1,5 +1,8 @@
 name: Release
 
+# Temp
+#on: pull_request
+#
 on:
   push:
     branches:
@@ -20,6 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16.x
+          registry-url: 'https://npm.pkg.github.com'
 
       - name: Install Dependencies
         run: npm i
@@ -30,4 +34,4 @@ jobs:
           publish: npm run changeset-publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
