--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ak-datasource-rest",
+  "name": "@ak/ak-datasource-rest",
   "description": "REST DataSource for Apollo Server v4",
   "version": "0.2.0",
   "license": "MIT",
