Feat/private package (#5)
* Update config to publish packages with private access

* add changeset

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "homepage": "https://github.com/Andrii-Kitsun/ak-datasource-rest.git#readme",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com",
+    "access": "restricted"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
