--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,6 +5,6 @@
     { "repo": "Andrii-Kitsun/ak-datasource-rest" }
   ],
   "commit": false,
-  "access": "public",
+  "access": "restricted",
   "baseBranch": "main"
 }
