test on pull request trigger

--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -1,9 +1,11 @@
 name: Release
 
-on:
-  push:
-    branches:
-      - main
+on: pull_request
+
+#on:
+#  push:
+#    branches:
+#      - main
 
 permissions:
   packages: write
