--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
-    "node": ">=16.14"
+    "node": ">=20"
   },
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
@@ -39,7 +39,7 @@
     "@types/jest": "29.5.14",
     "@types/lodash.clonedeep": "4.5.9",
     "@types/lodash.isplainobject": "4.0.9",
-    "@types/node": "16.18.125",
+    "@types/node": "20.14.8",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "cspell": "8.17.3",
@@ -48,7 +48,7 @@
     "graphql": "16.10.0",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
-    "nock": "13.5.6",
+    "nock": "14.0.0",
     "prettier": "3.4.2",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
@@ -62,8 +62,7 @@
     "@types/http-cache-semantics": "^4.0.1",
     "http-cache-semantics": "^4.1.1",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.isplainobject": "^4.0.6",
-    "node-fetch": "^2.6.7"
+    "lodash.isplainobject": "^4.0.6"
   },
   "peerDependencies": {
     "graphql": "^16.5.0"
