--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "target": "es2019",
+    "target": "es2023",
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -20,7 +20,7 @@
     "forceConsistentCasingInFileNames": true,
     // TODO(esm): enable if this package is ever ESM-only
     // "verbatimModuleSyntax": true,
-    "lib": ["es2019", "esnext.asynciterable"],
+    "lib": ["es2023"],
     "types": ["node"],
     "baseUrl": ".",
   }
